# gtetrinet

./: .cvsignore  AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  gtetrinet.desktop  gtetrinet.desktop.in  gtetrinet.doap  gtetrinet.gschema.xml  gtetrinet.gschema.xml.in.in  gtetrinet.schemas.in
.github/workflows/: c-cpp.yml
debian/: changelog  control  copyright  menu  rules
doc/: Makefile.am  gtetrinet.6
icons/: Makefile.am
m4/: ChangeLog  Makefile.am
po/: .cvsignore  ChangeLog  ChangeLog.pre-git  LINGUAS  Makevars  POTFILES.in  am.po  ar.po  az.po  bg.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  ga.po  hr.po  hu.po  it.po  ja.po  ko.po  lv.po  mk.po  ml.po  ms.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  pl.po  pt.po  (+12 more)
src/: .cvsignore  Makefile.am  Makefile.in  channel_list.ui  client.c  client.h  commands.c  commands.h  config.c  config.h  dialogs.c  dialogs.h  field.ui  fields.c  fields.h  fields.ui  gtet_config.h  gtetrinet.c  gtetrinet.gresource.xml.in  gtetrinet.h  keys.c  keys.h  keytable.h  misc.c  misc.h  partyline.c  partyline.h  partyline.ui  sound.c  sound.h  tetrinet.c  tetrinet.h  tetris.c  tetris.h  winlist.c  winlist.h  winlist.ui
src/images/: Makefile.am  fields.xpm  partyline.xpm  team24.xpm  winlist.xpm
themes/: Makefile.am  Makefile.in
themes/default/: Makefile.am  Makefile.in
themes/small/: Makefile.am  Makefile.in  theme.cfg
