dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/gtetrinet.c)

AM_INIT_AUTOMAKE(gtetrinet, 0.4.2pre1)

AC_PROG_CC

AM_PATH_GTK(1.2.0,,exit 1)

ALL_LINGUAS="ca"
GNOME_INIT 

AM_PATH_ESD(0.2.5, AC_DEFINE(HAVE_ESD))

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/time.h unistd.h)

AC_CHECK_FUNC(putenv)
AC_CHECK_FUNC(setenv)
if test $ac_cv_func_setenv = no; then
  if test $ac_cv_func_putenv = no; then
    echo "Error: Couldn't find either putenv() or setenv()"
    exit;
  else
    AC_DEFINE(HAVE_PUTENV)
  fi
else
  AC_DEFINE(HAVE_SETENV)
fi

AM_GNU_GETTEXT([external])

AC_OUTPUT([
Makefile
m4/Makefile 
po/Makefile.in
src/Makefile
src/images/Makefile
themes/Makefile
themes/default/Makefile
themes/small/Makefile
])
