EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 isc-posix.m4 \
	     lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 \
	     gnome-support.m4 gnome-common.m4 gnome-undelfs.m4 \
	     gnome-fileutils.m4 gnome-objc-checks.m4 gnome-ghttp-check.m4 \
	     gnome-orbit-check.m4 gnome-x-checks.m4 gnome-pthread-check.m4 \
	     gnome-gnorba-check.m4
